# osuuserbot

./: .gitignore  LICENSE  README.md  TODO.md  example_config.toml  pyproject.toml  strings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
res/: strings.yml
src/: config.py  logger.py  main.py  osu_service.py  utils.py
src/bot/: __init__.py  core.py  responses.py
src/osu/: __init__.py  service.py
src/utils/: __init__.py  checks.py  config.py  const.py  logging.py  strings.py
