[project]
name = "osuuserbot"
version = "0.0.0"
description = "osu! user statistics telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "colorlog>=6.10.1",
    "ossapi>=5.3.5",
    "telethon>=1.43.2",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

lint.select = ["I", "B", "UP", "N", "S", "C4", "E", "F"]
lint.ignore = []

format.indent-style = "space"
