[project]
name = "osuuserbot"
version = "0.2.0"
description = "osu! user statistics telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiolimiter>=1.2.1",
    "cachetools>=7.1.1",
    "colorlog>=6.10.1",
    "jinja2>=3.1.6",
    "ossapi>=5.3.5",
    "pysocks>=1.7.1",
    "python-socks>=2.8.1",
    "pyyaml>=6.0.3",
    "telethon>=1.43.2",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

lint.select = ["I", "B", "UP", "N", "S", "C4", "E", "F"]
lint.ignore = ["E701"]

format.indent-style = "space"
